Weddings photos gap fix

--- a/src/assets/scss/components/Weddings.scss
+++ b/src/assets/scss/components/Weddings.scss
@@ -9,10 +9,17 @@
     opacity:1;
     top:0;
     left:0;
-    width:95%;
+    width:100%;
     height: 100%;
 }
 
-.col-6:hover #hover-wedding {
-    background-image: url('../assets/images/wedding-hover-bg.jpg');
+.my-col-6 {
+
+    width:calc(50% - 40px);
+    &:hover #hover-wedding {
+        background-image: url('../assets/images/wedding-hover-bg.jpg');
+    }
+
 }
+
+
